[package]
name = "vulkano-learn"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
vulkano = "0.20"
vulkano-shaders = "0.20"
vulkano-win = "0.20"
winit = "0.24"
